[package]
name = "ex-webtransport"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
h3-webtransport = "0.1.0"
s2n-quic = "1.54.0"
bytes = "1.4.0"
pem = "3.0.4"
quinn = { version = "0.11.6", default-features = false, features = ["runtime-tokio"] }
rcgen = { version = "0.13.1", optional = true }
rustls = { version = "0.23.23", default-features = false }
rustls-native-certs = "0.8.0"
rustls-pemfile = "2.1.3"
rustls-pki-types = "1.8.0"
sha2 = "0.10.8"
socket2 = "0.5.3"
thiserror = "2.0.3"
time = "0.3.21"
#tokio = { version = "1.28.1", default-features = false, features = ["macros", "fs", "io-util", "full", "rt-multi-thread"] }
tracing = "0.1.37"
url = "2.4.0"
wtransport-proto = { version = "0.5.0", features = ["async"] }
x509-parser = "0.17.0"
wtransport = "0.5.0"
tracing-subscriber = "0.3.19"
tokio = { version = "1.43.0", features = ["macros", "fs", "io-util", "full", "rt-multi-thread"] } 
#clap = { version = "4", features = ["derive"] }
env_logger = "0.11.6"
webtransport-quinn = "0.10.0"
log = "0.4.26"
clap = { version = "4.5.31", features = ["derive"] }
