[package]
name = "ex-webtransport"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
s2n-quic = "1.54.0"
tokio = { version = "1.43.0", features = ["macros", "fs", "io-util", "full", "rt-multi-thread"] } 
env_logger = "0.11.6"
log = "0.4.26"
clap = { version = "4.5.31", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
wtransport = "0.6.0"
